# restaurant-menu-pricing

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  scrapy-cron.yml
application/config/: __init__.py  bootstrap.py
application/dataset/: __init__.py  config.py  dwh_export.py  generation.py  sampling.py
application/dataset/processing/: __init__.py  features.py  selection.py
application/datasets/: loader.py  splitter.py
application/preprocessing/: __init__.py  schema.py  text.py  transformers.py
bot/: pipelines.py  proxy_middlewares.py  settings.py
bot/spiders/: category_spider.py  restaurant_spider.py
core/: settings.py
infrastructure/azure/apim/: apim-policy.xml
infrastructure/azure/endpoints/: endpoint.yml
infrastructure/azure/endpoints/blue/: deployment-blue.yml
infrastructure/db/: __init__.py  mongo.py
infrastructure/docker/mlflow-models/menu-price/: .dockerignore
infrastrucure/db/: mongo.py
menu-price-img/: Dockerfile
model/: __init__.py  evaluation.py  spaces.py  specs.py  train.py  training.py  tune.py  tuning.py
model/registry/: specs.py
notebooks/: uber-eats-EDA.ipynb  uber-eats-ML.ipynb  uber-eats-deep-learning.ipynb
pipelines/: __init__.py  autotune.py  dwh_export_pipeline.py
scripts/deploy/: deploy_endpoint_blue.sh  deploy_endpoint_green.sh
services/api/: .env.example  pyproject.toml
services/api/app/config/: settings.py
services/api/app/domain/: inference.py
services/api/scripts/: generate_schema.py
services/common/: .env.azure.example  export_state_metadata.py
services/ui/: app.py
tests/: conftest.py  test_cleaning.py  test_cli_run.py  test_cli_serve.py  test_dwh_export.py  test_features.py  test_loader.py  test_mongo.py  test_sampling.py  test_selection.py  test_splitter.py
tests/cli/: conftest.py  test_cli_run.py
tests/unit/: conftest.py  test_cleaning.py  test_dwh_export.py  test_features.py  test_loader.py  test_mongo.py  test_networks_base.py  test_networks_ner.py  test_sampling.py  test_selection.py  test_splitter.py  test_utils_misc.py
tools/: run.py  serve.py
