[project]
name = "restaurant-menu-pricing"
version = "0.1.0"
description = "UberEats menu price prediction"
authors = [{ name = "ahmedshahriar", email = "ahmed.shahriar.sakib@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "scrapy>=2.13.3,<3.0.0",
  "scikit-learn>=1.7.2,<2.0.0",
  "transformers>=4.56.2,<4.57.0", # broken metadata err v4.57.0 https://github.com/huggingface/transformers/issues/41331
  "xgboost>=3.0.5,<4.0.0",
  "pydantic>=2.11.10,<3.0.0",
  "tensorflow-macos>=2.16.2,<3.0.0",
  "tensorflow-metal>=1.2.0,<2.0.0",
  "mlflow>=3.4.0,<4.0.0",
  "torch>=2.8.0,<3.0.0",
  "beautifulsoup4>=4.14.2,<5.0.0",
  "seaborn>=0.13.2,<0.14.0",
  "kagglehub>=0.3.13,<0.4.0",
  "optuna>=4.5.0,<5.0.0",
  "yellowbrick>=1.5,<2.0",
  "scikeras[tensorflow]>=0.13.0,<0.14.0",
  "loguru>=0.7.3,<0.8.0",
  "pymongo>=4.15.2,<5.0.0",
  "chompjs>=1.4.0,<2.0.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "0.13.3"
pytest = "8.4.2"
pre-commit = "4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# (Optional) Poetry plugin requirement – OK to keep even when using [project]
[tool.poetry.requires-plugins]
poethepoet = { version = "~0.35.0", extras = ["poetry_plugin"] }

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
exclude = [".venv","venv","env","build","dist",".mypy_cache",".ruff_cache",".pytest_cache"]

[tool.ruff.format]
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["application", "core"]

[tool.poe.tasks]
hello = "echo 'Hello from Poe the Poet 👋'"
lint-check = "poetry run ruff check ."
format-check = "poetry run ruff format --check ."
lint-fix = "poetry run ruff check --fix ."
format-fix = "poetry run ruff format ."

[tool.poe.tasks.test]
cmd = "poetry run pytest tests/"
